sample-deployment/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-app
  labels:
    app: sample-app
